--- a/src/index.css
+++ b/src/index.css
@@ -136,20 +136,17 @@ Header
 */
 
 .header {
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 .logo {
-  display: inline-block;
+  display: block;
   margin: 0 auto;
-  margin-top: 0rem;
-  width: 7.5rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
+  margin-top: -2rem;
+  width: 5rem;
   cursor: pointer;
-  position: absolute;
+ 
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50% 50%);
 }
 .header ul {
   display: flex;
@@ -176,7 +173,7 @@ Header
 
 @media screen and (min-width: 768px) {
   .logo {
-    width: 9rem;
+    width: 7rem;
   }
   .header a {
     font-size: 1.5rem;
